# HackerScript

./: README.md  build.hacker  install.hacker  install.sh
core/: cli.hcs  fs.hcs  http.hcs  json.hcs  os.hcs  string.hcs
examples/: hello-world.hcs
examples/1/: Virus.hcl
source-code/Fresh-Compiler/: main.py
source-code/HS1/: Cargo.toml  hackerscript.pest
source-code/HS1/src/: bytecode.rs  compiler.rs  main.rs  parser.rs
source-code/HS2/: Cargo.toml
source-code/HS2/src/: main.rs
source-code/HS3/: Cargo.toml
source-code/HS3/src/: hackerscript.pest  main.rs
source-code/HS4/: Cargo.toml  hsgc.h  main.py
source-code/HSGC/: Makefile  main.c
source-code/compiler/: Cargo.toml
source-code/compiler/cmd/: main.rs
source-code/compiler/src/: main.rs
source-code/hcs/: main.cr
source-code/hsdf/: Cargo.toml
source-code/hsdf/src/: main.rs
source-code/hspm/: Virus.hcl
source-code/hspm/cmd/: main.hcs
source-code/installer/: Virus.hcl
source-code/installer/cmd/: main.hcs
source-code/runtime/: Virus.hcl
source-code/runtime/cmd/: main.hcs
source-code/star/: Cargo.toml  main.py
source-code/star/src/: main.rs
source-code/virus/: Virus.hcl
source-code/virus/cmd/: main.hcs
source-code/vm/: Cargo.toml
source-code/vm/src/: main.rs
virus/cmd/: main.hcs
