[package]
name = "hsdf"
version = "0.1.0"
edition = "2021"
description = "HackerScript Diagnostic Formatter (pretty errors with source context)"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
license = "MPL2"

[dependencies]
miette = { version = "7.2", features = ["fancy", "syntect-highlighter"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
ariadne = "0.4.1"               # alternatywny / uzupełniający silnik kolorowania (opcjonalny)
syntect = "5.2"                 # wymagane przez miette fancy + syntect-highlighter
owo-colors = "4.0"              # używane wewnętrznie przez miette fancy
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
