[package]
name = "hs3"
version = "0.1.0"
edition = "2021"
description = "Virtual Machine for Hacker Script bytecode"
authors = ["HackerOS Team"]

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
bincode = "2.0.0-rc.3"
byteorder = "1.5.0"
nom = "7.1.3"
thiserror = "1.0.63"  # Do obsługi błędów
